Fix scrolled sidebar clipping issue

--- a/source/seedsource/static/sst/css/tool.css
+++ b/source/seedsource/static/sst/css/tool.css
@@ -45,7 +45,7 @@ body {
 .sidebar .tab-content {
     max-height: 100%;
     overflow: auto;
-    padding: 0px 15px 50px 15px;
+    padding: 0px 15px 0px 15px;
 }
 
 .sidebar .step {
